find product by itemId

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
           returns an item having:
           <pre>
             <code>
-    <span>product.id<span class="amp"> === </span>productId</span>
+    <span>product.itemId<span class="amp"> === </span>productId</span>
             </code>
           </pre>
         </p>
